changed character skills
